# SVOL

./: .gitignore  Cargo.toml  README.md  svol.txt
.github/workflows/: build_then_release.yml
src/: format.rs  main.rs  window.rs
svol/: Cargo.toml
svol/src/: discord.rs  format.rs  main.rs  minecraft.rs
