
# ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── #
# ─██████████████─██████──██████─██████████████─██████─────────                                                              #
# ─██░░░░░░░░░░██─██░░██──██░░██─██░░░░░░░░░░██─██░░██───────── SVOй Lаунчер                                                 #
# ─██░░██████████─██░░██──██░░██─██░░██████░░██─██░░██───────── v1 (9.11.1488)                                               #
# ─██░░██─────────██░░██──██░░██─██░░██──██░░██─██░░██─────────                                                              #
# ─██░░██████████─██░░██──██░░██─██░░██──██░░██─██░░██───────── автор: dttric                                                #
# ─██░░░░░░░░░░██─██░░██──██░░██─██░░██──██░░██─██░░██───────── github: https://github.com/dttric/svol                       #
# ─██████████░░██─██░░██──██░░██─██░░██──██░░██─██░░██───────── связь с мной: 8bayrggwi@mozmail.com | qn17kzkv5@mozmail.com  #
# ─────────██░░██─██░░░░██░░░░██─██░░██──██░░██─██░░██─────────                                                              #
# ─██████████░░██─████░░░░░░████─██░░██████░░██─██░░██████████─                                                              #
# ─██░░░░░░░░░░██───████░░████───██░░░░░░░░░░██─██░░░░░░░░░░██─                                                              #
# ─██████████████─────██████─────██████████████─██████████████─                                                              #
# ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── #

[package]
name = "svol"
version = "9.11.1488"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorized = "1.0.0"
console = "0.15.8"
minecraft_launcher_core = "=0.1.2"
